# Omniconvert

./: .gitignore  .zenodo.json  CITATION.cff  Makefile  OmniConvert.command  README.md  benchmark.py  pyproject.toml  requirements-extended.txt  requirements-ocr.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-06-12-omniconvert-design.md
src/omni_convert/: __init__.py  __main__.py  cli.py
src/omni_convert/converters/: __init__.py
src/omni_convert/converters/audio/: __init__.py  mp3_to_wav.py
src/omni_convert/converters/data/: __init__.py  csv_to_json.py  hdf5_to_parquet.py  json_to_csv.py  root_to_csv.py  sqlite_to_csv.py
src/omni_convert/converters/document/: __init__.py  docx_to_md.py  pdf_to_md.py  pdf_to_md_sci.py
src/omni_convert/converters/image/: __init__.py  avif_to_png.py  image_to_latex.py
src/omni_convert/core/: __init__.py  converter.py  pipeline.py  registry.py
src/omni_convert/gui/: __init__.py  api.py  app.py
src/omni_convert/gui/static/: index.html
tests/: conftest.py  test_cli.py  test_core.py  test_e2e.py  test_gui.py
tests/test_converters/: test_adversarial_1.py  test_adversarial_2.py  test_audio.py  test_data.py  test_m3_converters.py  test_m4_converters.py
